--- a/index.html
+++ b/index.html
@@ -5,8 +5,163 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader-board-css</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- header start -->
+    <header>
+
+    </header>
+    <!-- header end -->
+    <!-- top-player and top-blog-section start-->
+    <main>
+        <section class="container">
+            <h2 class="section-title">Top Players</h2>
+            <div class="top-players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3 class="player-name">top player-1</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h3 class="player-name">top player-2</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h3 class="player-name">top player-3</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h3 class="player-name">top player-4</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h3 class="player-name">top player-5</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h3 class="player-name">top player-6</h3>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blog">
+                <h2 class="section-title">Top Blog</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="">Danny Sapio</a> </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- top-player and top-blog-section end-->
+
+        <!-- top blog section start -->
+        <section class="container">
+            <h1 class="section-title">Latest Courses</h1>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React - The Complete Guide 2023</h3>
+                        <p><a href=""  class="course-author">Reed Krakoff.</a></p>
+                        <div class="course-info">
+                           <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>4.5</span>
+                           </div>
+                           <div class="course-duration">
+                               <i class="fa-solid fa-clock"></i> 01 : 30hr
+                           </div>
+                       </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React - The Complete Guide 2023</h3>
+                        <p><a href=""  class="course-author">Reed Krakoff.</a></p>
+                        <div class="course-info">
+                           <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>4.5</span>
+                           </div>
+                           <div class="course-duration">
+                               <i class="fa-solid fa-clock"></i> 01 : 30hr
+                           </div>
+                       </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React - The Complete Guide 2023</h3>
+                        <p><a href=""  class="course-author">Reed Krakoff.</a></p>
+                        <div class="course-info">
+                           <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>4.5</span>
+                           </div>
+                           <div class="course-duration">
+                               <i class="fa-solid fa-clock"></i> 01 : 30hr
+                           </div>
+                       </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+          <!-- top blog section end -->
+    </main>
 </body>
 </html>
